fix: allow insensitive enum parsing, response format
