# src/main/java/io/github/primelib/prometheus4j/model/SnapshotCreateResponse.java
@@ -43,7 +43,7 @@ public class SnapshotCreateResponse {
     protected String status;
 
     @JsonProperty("data")
-    protected SnapshotCreateResponseData data;
+    protected Snapshot data;
 
 
 }
